--- a/Aula_3/Aula3Exer/src/app/calcular-media/calcular-media.component.html
+++ b/Aula_3/Aula3Exer/src/app/calcular-media/calcular-media.component.html
@@ -1,1 +1,6 @@
-<p>calcular-media works!</p>
+<div>
+    <input name="first" ngModel/>
+    <input name="last" ngModel/>
+    <button>Submit</button>
+</div> 
+  
