--- a/Aula_5/exerciciologin/src/app/components/footer/footer.component.html
+++ b/Aula_5/exerciciologin/src/app/components/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<div class="container-fluid bg-black text-white d-flex justify-content-center fixed-bottom">
+    <p class="my-0 py-2">Copyright 2024 - João Sobrinho</p>
+  </div>
