--- a/Aula_5/exerciciologin/src/app/components/home/home.component.html
+++ b/Aula_5/exerciciologin/src/app/components/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<div>
+  <p>home works!</p>
+  <div class="container w-50">
+    <h1>Seja bem vindo, {{ name }}</h1>
+  </div>
+  <button type="submit" class="btn btn-primary" onclick="toCadastrar()">Cadastrar</button>
+</div>
